fix footer overlapping

--- a/public/css/media-queries.css
+++ b/public/css/media-queries.css
@@ -262,11 +262,6 @@
         font-size: 1.4rem;
     }
 
-    .footer .col-sm-2,
-    .footer .col-sm-3 {
-        margin-bottom: 10px;
-    }
-
     .footer--main-logo {
         font-size: 25px;
         font-size: 2.5rem;
@@ -439,17 +434,7 @@
 
 @media (min-width:558px) and (max-width: 767px) {
 
-    .footer .col-12,
-    .footer ul.col-12  {
-        width: 33.3%;
-        text-align: left;
-        float: left;
-    }
 
-    .footer ul li {
-        display: block;
-        text-align: left;
-    }
 
     .portfolio--list li.col-12 {
         width: 50%;
@@ -467,22 +452,6 @@
 }
 
 @media (max-width:557px) {
-
-    .footer .col-12 {
-        text-align: left;
-    }
-
-    .footer ul.col-12 {
-        width: 50%;
-        text-align: left;
-        float: left;
-        margin-bottom: 30px;
-    }
-
-    .footer ul li {
-        display: block;
-        text-align: left;
-    } 
 
     .project .portfolio--feature__main {
         margin-bottom: 30px;
